--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -142,7 +142,10 @@
   }
 
 
-  @include respond(tab-port) {
+  // @include respond(tab-port) {
+    @media only screen and (max-width: 56.25em),
+    only screen and (hover: none) {
+    
       // FUNCTIONALITY
     height: auto;
     border-radius: 3px;
